--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -25,9 +25,32 @@
   }
   .submenu-item {
     position: relative;
+    .submenu-title {
+      display: flex;
+      align-items: center;
+    }
+    .arrow-icon {
+      transition: transform .25s ease-in-out;
+      margin-left: 3px;
+    }
+    &:hover {
+      .arrow-icon {
+        transform: rotate(180deg);
+      }
+    }
+  }
+  .is-vertical {
+    .arrow-icon {
+      transform: rotate(0deg) !important;
+    }
+  }
+  .is-vertical.is-opened {
+    .arrow-icon {
+      transform: rotate(180deg) !important;
+    }
   }
   .viking-submenu {
-    display: none;
+    // display: none;
     list-style:none;
     padding-left: 0;
     white-space: nowrap;
@@ -42,9 +65,9 @@
       }
     }
   }
-  .viking-submenu.menu-opened {
-    display: block;
-  }
+//   .viking-submenu.menu-opened {
+//     display: block;
+//   }
 }
 .menu-horizontal {
   >.menu-item {
