--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -187,6 +187,19 @@ background-color .15s ease-in-out,
 border-color .15s ease-in-out,
 box-shadow .15s ease-in-out !default;
 
+// Alerts
+//
+// Define alert colors, border radius, and padding.
+
+$alert-padding-y:                   .75rem !default;
+$alert-padding-x:                   1.25rem !default;
+$alert-margin-bottom:               1rem !default;
+$alert-border-radius:               $border-radius !default;
+$alert-title-font-weight:           $font-weight-bold !default;
+$alert-border-width:                $border-width !default;
+$alert-description-font-size:       $font-size-sm !default;
+$alert-description-top-margin:      .3rem !default;
+
 // menu
 $menu-border-width:            $border-width !default;
 $menu-border-color:            $border-color !default;
