--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -59,4 +59,14 @@
     transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
     transform-origin: $origin;
   }
- }
+}
+
+@mixin alert-style(
+    $background,
+    $border,
+    $color,
+) {
+    color: $color;
+    background: $background;
+    border-color: $border;
+}
