--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,9 @@
 // button
 @import "../components/Button/style";
 
+// alert
+@import "../components/Alert/style";
+
 // menu
 @import "../components/Menu/style";
 
