--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,5 +17,8 @@
 // menu
 @import "../components/Menu/style";
 
+// tabs
+@import "../components/Tabs/style";
+
 // icon
 @import "../components/Icon/style";
