--- a/src/components/Upload/_style.scss
+++ b/src/components/Upload/_style.scss
@@ -4,6 +4,25 @@
   list-style-type: none;
 }
 
+.viking-uploader-dragger {
+  background: $gray-100;
+  border: 1px dashed $gray-300;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 20px;
+  width: 360px;
+  height: 180px;
+  text-align: center;
+  &:hover {
+    border: 1px dashed $primary;
+  }
+  &.is-dragover {
+    border: 2px dashed $primary;
+    background: rgba($primary, .2);
+  }
+}
+
+
 .viking-upload-list-item {
   transition: all .5s cubic-bezier(.55,0,.1,1);
   font-size: 14px;
