--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -269,6 +269,14 @@ $input-group-addon-color:               $input-color !default;
 $input-group-addon-bg:                  $gray-200 !default;
 $input-group-addon-border-color:        $input-border-color !default;
 
+// Progress bars
+
+$progress-font-size:                $font-size-base * .75 !default;
+$progress-bg:                       $gray-200 !default;
+$progress-border-radius:            $border-radius !default;
+$progress-bar-color:                $white !default;
+$progress-bar-transition:           width .6s ease !default;
+
 // Navs
 $nav-link-padding-y:                .5rem !default;
 $nav-link-padding-x:                1rem !default;
