--- a/src/components/AutoComplete/_style.scss
+++ b/src/components/AutoComplete/_style.scss
@@ -8,7 +8,7 @@
   position: absolute;
   background: $white;
   z-index: 100;
-  top: calc(100%  8px);
+  top: calc(100% + 8px);
   left: 0;
   border: $menu-border-width solid $menu-border-color;
   box-shadow: $submenu-box-shadow;
